--- a/_notebooks/2022-10-27-Accomplishments.ipynb
+++ b/_notebooks/2022-10-27-Accomplishments.ipynb
@@ -26,7 +26,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nathan Kim"
+    "**Nathan Kim:**\n",
+    "- "
    ]
   }
  ],
