--- a/_notebooks/2022-10-27-Accomplishments.ipynb
+++ b/_notebooks/2022-10-27-Accomplishments.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "**Nathan Kim:**\n",
-    "- "
+    "- I was off to a pretty rough start when I couldn't properly commit and sync ANY changes to our group fastpages and flask. However, with the help from access tokens, I was finally able to start coding. As the backend developer, I am working mainly on our Flask repo. Like Sri, I also started off with python, but then realized that it would not display on the website. As a result, I started working using JavaScript in order to work behind the scenes in order to create my game. "
    ]
   }
  ],
