--- a/_notebooks/2022-10-27-Accomplishments.ipynb
+++ b/_notebooks/2022-10-27-Accomplishments.ipynb
@@ -29,6 +29,20 @@
     "**Nathan Kim:**\n",
     "- I was off to a pretty rough start when I couldn't properly commit and sync ANY changes to our group fastpages and flask. However, with the help from access tokens, I was finally able to start coding. As the backend developer, I am working mainly on our Flask repo. Like Sri, I also started off with python, but then realized that it would not display on the website. As a result, I started working using JavaScript in order to work behind the scenes in order to create my game. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Max Wu:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the scrum master of loophole games, I partook in mainly planning the project and working on my group assignment, which is creating a pong game in the frontend. In terms of developing, our group is a little behind schedul. However, with everything sorted out today, we now have a clear plan of attack and now know our exact roles in terms of backend and frontend work. For the pong game, I have written a working code for the game in javascript, and I am now transferring that work into a fast pages (frontend). We are mainly planning to finish our game by this weekend, and start on the jokes/api to transfer data from frontend to backend for the leaderboard that will appear on our flask page."
+   ]
   }
  ],
  "metadata": {
