--- a/_posts/2022-10-27-flask.md
+++ b/_posts/2022-10-27-flask.md
@@ -4,4 +4,4 @@ layout: default
 description: Here is our flask website
 categories: []
 ---
-Link to our [flask](http://loopholegames.nighthawkcodescrums.gq/)
+**Link to our [flask](http://loopholegames.nighthawkcodescrums.gq/)**
