--- a/_posts/2022-10-27-pong.md
+++ b/_posts/2022-10-27-pong.md
@@ -85,8 +85,8 @@ body {
 
 
 <script>
-  import Ball from "./Ball.js"
-import Paddle from "./Paddle.js"
+  import Ball from "js/Ball.js"
+import Paddle from "js/Paddle.js"
 
 const ball = new Ball(document.getElementById("ball"))
 const playerPaddle = new Paddle(document.getElementById("player-paddle"))
